2000-08-21  Mo DeJong  <mdejong@redhat.com>

	* src/error.cpp (PrintUNREACHABLE_DEFAULT_CATCH_CLAUSE):
	Reword warning for try block that catches Exception
	but does not contain a method that can raise a
	checked exception.

2000-08-13  Chris Abbey <cabbey@bresnanlink.net>

	* src/stream.cpp (~LexStream): Set columns to NULL
	after deleting it. Don't delete comment_buffer again,
	it is already done in DestroyInput().

2000-07-30  Mo DeJong  <mdejong@redhat.com>

	* jikes.spec: Add default -O3 flag when building
	the release verison of jikes under Red Hat Linux.

2000-07-30  Mo DeJong  <mdejong@redhat.com>

	* src/decl.cpp (CompleteSymbolTable, AddInheritedMethods): Revert
	change meant to fix bug 102. The fix for 102 causes crashes in
	CheckInheritedMethodThrows. We will need to re-address this
	problem after the 1.12 release.

2000-07-30  Mo DeJong  <mdejong@redhat.com>

	* TODO: Updated TODO list with things
	we did not get done before 1.12 release.

2000-07-30  Mo DeJong  <mdejong@redhat.com>

	* src/option.cpp (ArgumentExpanded): Fix core dump
	when processing a @file argument that contains
	the sequence "\n\n".

2000-07-27  Mo DeJong  <mdejong@redhat.com>
 
	* src/system.cpp (GetOutputDirectory): Check for
	a NULL semantic member of a FileSymbol when writing
	dependencies. A .class file can have a NULL
	semantic member which was causing a core dump.

2000-07-26  C. Brian Jones  <cbj@gnu.org>
 
	* src/option.cpp (Option): Create a
	copy of the -classpath string so it
	can be deleted correctly later.

2000-07-26  Mo DeJong  <mdejong@redhat.com>

	* src/unparse.cpp: Uncomment #includes,
	they need to be moved to platform.h but
	without them the compile would fail if
	-DJIKES_DEBUG was set.

2000-07-25  Mo DeJong  <mdejong@redhat.com>

	* src/configure:
	* src/configure.in: Remove files from
	the old build system. These files
	were removed before but somehow they
	showed up in the CVS again.

2000-07-25  Chris Abbey <cabbey@bresnanlink.net>
